example-team-app-dev-hashibank/testKustomize/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hashibank
  namespace: app-hashibank
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing 
    alb.ingress.kubernetes.io/target-type: ip
    #alb.ingress.kubernetes.io/wafv2-acl-arn: WAF_ARN_REPLACE
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hashibank
                port:
                  number: 8080
