example-team-app-dev-hashibank/testKustomize/base/output.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/wafv2-acl-arn: WAF_ARN_TEST_VALUE
    kubernetes.io/ingress.class: alb
  name: hashibank
  namespace: app-hashibank
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - backend:
          service:
            name: hashibank
            port:
              number: 8080
        path: /
        pathType: Prefix
